--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3"
   }
 }
