--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/yongheng2016/Koa2#readme",
   "dependencies": {
+    "ejs": "^2.6.1",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa-views": "^6.1.4"
   },
   "devDependencies": {
     "webpack": "^4.8.1",
